--- a/pbjson-types/Cargo.toml
+++ b/pbjson-types/Cargo.toml
@@ -15,12 +15,12 @@ name = "pbjson_types"
 
 [features]
 default = ["std"]
-std = ["chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std"]
+std = ["chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std", "bytes/std"]
 
 [dependencies] # In alphabetical order
 informalsystems-pbjson = { path = "../pbjson", version = "0.6.0" , default-features = false }
 
-bytes = "1.0"
+bytes = { version = "1.0", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["alloc"] }
 prost = { version = "0.11", default-features = false }
 serde = { version = "1.0", features = ["derive"], default-features = false }
