--- a/pbjson-types/Cargo.toml
+++ b/pbjson-types/Cargo.toml
@@ -15,18 +15,18 @@ name = "pbjson_types"
 
 [features]
 default = ["std"]
-std = ["chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std"]
+std = ["bytes/std", "chrono/std", "informalsystems-pbjson/std", "prost/std", "serde/std", "serde_json/std"]
 
 [dependencies] # In alphabetical order
 informalsystems-pbjson = { path = "../pbjson", version = "0.6.0" , default-features = false }
 
-bytes = "1.0"
+bytes = { version = "1.0", default-features = false }
 chrono = { version = "0.4", default-features = false, features = ["alloc"] }
-prost = { version = "0.11", default-features = false }
+prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 
 [dev-dependencies]
-serde_json = "1.0"
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 [build-dependencies]
 informalsystems-pbjson-build = { path = "../pbjson-build", version = "0.6.0" }
