--- a/pbjson-test/Cargo.toml
+++ b/pbjson-test/Cargo.toml
@@ -7,12 +7,14 @@ description = "Test resources for pbjson converion"
 repository = "https://github.com/influxdata/pbjson"
 
 [dependencies]
-prost = "0.12"
-pbjson = { path = "../pbjson" }
-pbjson-types = { path = "../pbjson-types" }
-serde = { version = "1.0", features = ["derive"] }
+prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
+pbjson = { path = "../pbjson" , default-features = false}
+pbjson-types = { path = "../pbjson-types" , default-features = false}
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
+default = ["std"]
+std = ["prost/std", "serde/std", "pbjson/std", "pbjson-types/std"]
 ignore-unknown-fields = []
 btree = []
 emit-fields = []
